# lissam6d

./: .gitignore  .gitmodules  README.md  render_templates.py  requirements.txt  requirements_jetson.txt  run_inference_camera.py  steps.txt
cpp/: CMakeLists.txt
cpp/include/: BaseInferencer.hpp
cpp/src/: BaseInferencer.cpp  main.cpp
data/: cam.json
data/bolt/: bolt.ply
ism/: Learning.md  realtime_inference.py  realtime_inference_silhoptim.py  run_inference_ism.py
ism/configs/model/: ISM_fastsam.yaml  ISM_sam.yaml
ism/configs/model/descriptor_model/: dinov2.yaml
ism/model/: detector.py  dinov2.py  loss.py  sam.py  sam2.py  utils.py
ism/utils/: find_neighbors.py  inout.py  pose_utils.py
onnx_export/: cp.py  export_onnx_dinov2.py  export_onnx_industrial.py  export_onnx_sam2.py
pem/: realtime_inference.py  run_inference_pem.py  test_bop.py  train.py
pem/config/: base.yaml
pem/pointnet2_pem/: coarse_point_matching.py  feature_extraction.py  fine_point_matching.py  pose_estimation_model.py  transformer.py
pem/pointnet2_pem/config/: base.yaml
pem/pointnet2_pem/pointnet2/: pointnet2_utils.py  pytorch_utils.py  setup.py
pem/pointnet2_pem/utils/: bop_object_utils.py  data_utils.py  loss_utils.py  model_utils.py  solver.py
realtime/: realtime_inference.py
realtime/utils/: pyrender.py
scripts/: download_weights.py
src/: realtime_inference.py  realtime_inference_silho.py  realtime_inference_silhoptim.py
tests/: test_amg.py  test_realsense_capture.py  test_sam2_realsense.py  test_ultralytics_sam_realsense.py
trt_inference/: CMakeLists.txt
(+2 files in other folders)
